--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - SPRING_MAIN_BANNER-MODE=off
       - SPRING_CLOUD_CONFIG_URI=http://config:8888
       - EUREKA_URI=http://eureka:8761/eureka
+      - SPRING_ZIPKIN_BASE-URL=http://zipkin:9411/
     logging:
       driver: gelf
       options:
@@ -41,6 +42,7 @@ services:
       - SPRING_MAIN_BANNER-MODE=off
       - SPRING_CLOUD_CONFIG_URI=http://config:8888
       - EUREKA_URI=http://eureka:8761/eureka
+      - SPRING_ZIPKIN_BASE-URL=http://zipkin:9411/
       - SPRING_DATA_MONGODB_HOST=mongo
     logging:
       driver: gelf
@@ -52,6 +54,7 @@ services:
       - SPRING_MAIN_BANNER-MODE=off
       - SPRING_CLOUD_CONFIG_URI=http://config:8888
       - EUREKA_URI=http://eureka:8761/eureka
+      - SPRING_ZIPKIN_BASE-URL=http://zipkin:9411/
       - SPRING_DATA_MONGODB_HOST=mongo
     logging:
       driver: gelf
@@ -63,6 +66,7 @@ services:
       - SPRING_MAIN_BANNER-MODE=off
       - SPRING_CLOUD_CONFIG_URI=http://config:8888
       - EUREKA_URI=http://eureka:8761/eureka
+      - SPRING_ZIPKIN_BASE-URL=http://zipkin:9411/
       - SPRING_REDIS_HOST=redis
     logging:
       driver: gelf
@@ -90,6 +94,17 @@ services:
     environment:
       - ELASTICSEARCH_URL=http://elastic:9200
       - XPACK_MONITORING_ENABLED=false
+  zipkin:
+    image: openzipkin/zipkin:2.0.1
+    environment:
+      - STORAGE_TYPE=elasticsearch
+      - ES_HOSTS=http://elastic:9200
+      - ES_USERNAME=elastic
+      - ES_PASSWORD=changeme
+  zipkin-ui:
+    image: openzipkin/zipkin-ui:2.0.1
+    ports: [ '9412:80' ]
+  
 
 volumes:
   mongo-data:
