--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -37,6 +37,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+        	<artifactId>metrics-core</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
